plugins {
    id 'java'
    id 'com.diffplug.spotless' version "8.1.0"
}

group 'com.github.ankowals'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    gradlePluginPortal()
}

dependencies {
    testAnnotationProcessor("org.projectlombok:lombok:1.18.42")
    testCompileOnly("org.projectlombok:lombok:1.18.42")

    //runner
    testImplementation("org.junit.jupiter:junit-jupiter:6.0.1")
    testImplementation("org.junit.platform:junit-platform-launcher:6.0.1")
    testImplementation("org.junit-pioneer:junit-pioneer:2.3.0")
    testImplementation("io.github.glytching:junit-extensions:2.6.0")

    //logging
    testImplementation("ch.qos.logback:logback-core:1.5.25")
    testImplementation("ch.qos.logback:logback-classic:1.5.25")
    testImplementation("org.slf4j:slf4j-api:2.0.17")
    testImplementation("org.slf4j:jul-to-slf4j:2.0.17")
    testImplementation("org.aspectj:aspectjweaver:1.9.25")

    //screenplay
    testImplementation("org.apache.commons:commons-lang3:3.20.0")
    testImplementation("org.assertj:assertj-core:4.0.0-M1")
    testImplementation("org.hamcrest:hamcrest:3.0")
    testImplementation("org.awaitility:awaitility:4.3.0")

    //selenium
    testImplementation("org.seleniumhq.selenium:selenium-java:4.40.0")
    testImplementation("io.github.bonigarcia:selenium-jupiter:6.3.1")
    testImplementation("org.jsoup:jsoup:1.21.2")
    testImplementation("com.aventstack:extentreports:5.1.2")
    testImplementation("commons-io:commons-io:2.21.0")
    testImplementation("com.github.romankh3:image-comparison:4.4.0")
    testImplementation("com.deque.html.axe-core:selenium:4.11.0")
}

test {
    sourceCompatibility = 1.22
    targetCompatibility = 1.22

    //environment "WDM_CHROMEVERSION", "142.0"

    environment "BROWSER_IN_DOCKER_ENABLED", "false"
    environment "BROWSER_IN_HEADLESS_ENABLED", "false"

    //recording via container
    //environment "WDM_DOCKERENABLERECORDING", "false"

    //recording via extension works in headless in container
    //when in use switch off recording via container
    environment "BROWSER_WATCHER_ENABLED", "false"

    environment "ACCESSIBILITY_ASSERTIONS_ENABLED", "true"

    //requires to run com.github.ankowals.tests in container
    environment "VISUAL_ASSERTIONS_ENABLED", "false "
    environment "VISUAL_ASSERTIONS_REPLACE_SCREENSHOTS", "false"

    useJUnitPlatform()

    doFirst {
        def weaver = configurations.testRuntimeClasspath.find { it.name.contains("aspectjweaver") }
        jvmArgs += "-javaagent:$weaver"
        jvmArgs += "--add-opens=java.base/java.util=ALL-UNNAMED"
        jvmArgs += "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED"
        jvmArgs += "--add-opens=java.base/java.lang=ALL-UNNAMED"
        jvmArgs += "--add-opens=java.base/java.time=ALL-UNNAMED"
        jvmArgs += "--add-opens=java.base/java.time.format=ALL-UNNAMED"
    }
}

spotless {
    java {
        googleJavaFormat()
    }
}